--- a/nginx.yaml
+++ b/nginx.yaml
@@ -4,21 +4,21 @@ metadata:
   name: nginx-deployment
   labels:
     app: nginx
-    pod: [ "$my" ]
 spec:
   replicas: 3
   selector:
     matchLabels:
       app: nginx
-      pod: [ "$my" ]
   template:
     metadata:
       labels:
         app: nginx
-        pod: [ "$my" ]
     spec:
       containers:
       - name: nginx
         image: nginx:1.14.2
+        env:
+        - name: nginx
+          value: "$my" 
         ports:
         - containerPort: 80
